# kstore

./: CMakeLists.txt
include/kstore/: item_trait.hpp  list_impl.hpp  rc.hpp  share_store.hpp
include/kstore/qt/: gadget_model.hpp  meta_list_model.hpp  meta_role.hpp  meta_utils.hpp  qobject_list_model.hpp  qtable_proxy_model.hpp  qvariant_list_model.hpp
include/meta_model/: item_trait.hpp  qgadget_list_model.hpp  qmeta_list_model.hpp  qmeta_model_base.hpp  qobject_list_model.hpp  qtable_proxy_model.hpp  rc.hpp  share_store.hpp
src/: qmetaobjectmodel.cpp  qtable_proxy_model.cpp
src/qt/: CMakeLists.txt  gadget_model.cpp  meta_list_model.cpp  meta_role.cpp  meta_utils.cpp  moc.cpp  qtable_proxy_model.cpp
test/: CMakeLists.txt  store.cpp
